# PLC-PYTHON-library

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-19-phase1-walking-skeleton.md  2026-06-20-il-jumps-labels.md  2026-06-20-plcopen-fbd-sfc.md  2026-06-20-sfc-parallel-branches.md  2026-06-20-structs-enums-fbs.md  README.md
docs/superpowers/specs/: 2026-06-19-plc-python-converter-design.md
examples/: delay.html  delay.st  latch.html  latch.sfc
src/plcpy/: __init__.py  cli.py  convert.py  diagnostics.py  errors.py  ir.py  lsp.py  plcopen.py  registry.py  runtime.py  visualize.py
src/plcpy/backends/: fbd.py  il.py  ld.py  python.py  sfc.py  st.py
src/plcpy/frontends/: _common.py  _il_cfg.py  fbd.py  il.py  ld.py  python.py  sfc.py  st.py  st_grammar.lark
tests/: test_arrays.py  test_backend_python.py  test_backend_st.py  test_cli.py  test_convert.py  test_diagnostics.py  test_enum.py  test_fbd_sfc.py  test_frontend_python.py  test_frontend_st.py  test_il.py  test_il_cfg.py  test_il_jumps.py  test_ir.py  test_ld.py  test_lsp.py  test_member_nested.py  test_plcopen.py  test_plcopen_fbd_sfc.py  test_registry.py  test_runtime.py  test_semantic_equivalence.py  test_sfc_parallel.py  test_smoke.py  test_st_for_case.py  test_struct.py  test_timers.py  test_types.py  test_user_fb.py  test_vendors.py  test_vendors_more.py  test_visualize.py  test_while_loop.py
vscode-extension/: .vscodeignore  README.md  package.json  plcpy-vscode-0.1.0.vsix  plcpy-vscode-0.1.1.vsix  plcpy-vscode-0.1.2.vsix
vscode-extension/src/: extension.ts
(+5 files in other folders)
