[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plcpy"
version = "0.1.0"
description = "Bidirectional PLC (IEC 61131-3) <-> Python converter"
requires-python = ">=3.11"
dependencies = ["lark>=1.1"]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6"]

[project.scripts]
plcpy = "plcpy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
